--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -262,6 +262,7 @@
     <Content Include="Views\PlantSets\Delete.cshtml" />
     <Content Include="Views\PlantSets\Details.cshtml" />
     <Content Include="Views\PlantSets\Edit.cshtml" />
+    <Content Include="Views\PlantSets\GetPlantData.cshtml" />
     <Content Include="Views\PlantSets\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
