Add plant and weed images into the project

--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -202,6 +202,67 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Picture\header_picture.jpg" />
+    <Content Include="Picture\logo.png" />
+    <Content Include="Picture\PlantSet\Acacia implexa.jpg" />
+    <Content Include="Picture\PlantSet\Acacia pycnantha.jpg" />
+    <Content Include="Picture\PlantSet\Acacia verticillata.jpg" />
+    <Content Include="Picture\PlantSet\Acaena novae zelandiae.jpg" />
+    <Content Include="Picture\PlantSet\Allocasuarina verticillata.jpg" />
+    <Content Include="Picture\PlantSet\Billadiera scandens.jpg" />
+    <Content Include="Picture\PlantSet\Brachyscome multifida.jpg" />
+    <Content Include="Picture\PlantSet\Burchardia umbellata.jpg" />
+    <Content Include="Picture\PlantSet\Bursaria spinosa.jpg" />
+    <Content Include="Picture\PlantSet\Clematis aristata.jpg" />
+    <Content Include="Picture\PlantSet\Clematis microphylla.jpg" />
+    <Content Include="Picture\PlantSet\Convolvulus erubescens.jpg" />
+    <Content Include="Picture\PlantSet\Dichondra repens.jpg" />
+    <Content Include="Picture\PlantSet\Dodonaea viscosa.jpg" />
+    <Content Include="Picture\PlantSet\Eucalyptus camaldulensis.jpg" />
+    <Content Include="Picture\PlantSet\Eucalyptus melliodora.png" />
+    <Content Include="Picture\PlantSet\Goodenia ovata.jpg" />
+    <Content Include="Picture\PlantSet\Hardenbergia violacea.jpg" />
+    <Content Include="Picture\PlantSet\Leptospermum lanigerum.jpg" />
+    <Content Include="Picture\PlantSet\Microlaena stipoides.jpg" />
+    <Content Include="Picture\PlantSet\Myoporum parvifolium.jpg" />
+    <Content Include="Picture\PlantSet\Olearia pimeleoides.jpg" />
+    <Content Include="Picture\PlantSet\Pandorea pandorana.jpg" />
+    <Content Include="Picture\PlantSet\Podolepis jaceoides.jpg" />
+    <Content Include="Picture\PlantSet\Prostanthera lasianthos.jpg" />
+    <Content Include="Picture\PlantSet\Solanum laciniatum.jpeg" />
+    <Content Include="Picture\PlantSet\Themeda triandra.jpg" />
+    <Content Include="Picture\PlantSet\Viminaria juncea.jpg" />
+    <Content Include="Picture\PlantSet\Viola hederacea.jpg" />
+    <Content Include="Picture\PlantSet\Wahlenbergia stricta.jpg" />
+    <Content Include="Picture\Weed\Allium triquetrum.jpg" />
+    <Content Include="Picture\Weed\Anredera cordifolia.jpg" />
+    <Content Include="Picture\Weed\Araujia sericifera.jpg" />
+    <Content Include="Picture\Weed\Asparagus asparagoides.jpg" />
+    <Content Include="Picture\Weed\Brassica rapa.jpg" />
+    <Content Include="Picture\Weed\Celtis sinensis.jpg" />
+    <Content Include="Picture\Weed\Chrysanthemoides monilifera.jpg" />
+    <Content Include="Picture\Weed\Coprosma repens.jpg" />
+    <Content Include="Picture\Weed\Cotoneaster ssp.jpg" />
+    <Content Include="Picture\Weed\Crataegus monogyna.jpg" />
+    <Content Include="Picture\Weed\Cytisus scoparius.jpg" />
+    <Content Include="Picture\Weed\Delairea odorata.jpg" />
+    <Content Include="Picture\Weed\Dipogon lignosus.jpg" />
+    <Content Include="Picture\Weed\Echium plantagineum.jpg" />
+    <Content Include="Picture\Weed\Ehrharta erecta.jpg" />
+    <Content Include="Picture\Weed\Erica lusitanica.jpg" />
+    <Content Include="Picture\Weed\Fraxinus angustifolia.jpg" />
+    <Content Include="Picture\Weed\Galium aparine.jpg" />
+    <Content Include="Picture\Weed\Hedera helix.jpg" />
+    <Content Include="Picture\Weed\Ipomoea indica.jpg" />
+    <Content Include="Picture\Weed\Lycium ferocissimum.jpg" />
+    <Content Include="Picture\Weed\Malva parviflora.jpg" />
+    <Content Include="Picture\Weed\Nassella neesiana.jpg" />
+    <Content Include="Picture\Weed\Pittosporum undulatum.jpg" />
+    <Content Include="Picture\Weed\Populus alba.jpg" />
+    <Content Include="Picture\Weed\Salix spp.jpg" />
+    <Content Include="Picture\Weed\Tradescantia albiflora.jpg" />
+    <Content Include="Picture\Weed\Ulex europaeus.jpg" />
+    <Content Include="Picture\Weed\Ulmus ssp.jpg" />
+    <Content Include="Picture\Weed\Vinca major.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
