Finish all the element and navigate of the website. Date calculation haven't finish. Front end can modify now.

--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -233,6 +233,9 @@
     <Content Include="Picture\PlantSet\Viminaria juncea.jpg" />
     <Content Include="Picture\PlantSet\Viola hederacea.jpg" />
     <Content Include="Picture\PlantSet\Wahlenbergia stricta.jpg" />
+    <Content Include="Picture\SunNeed\1.jpg" />
+    <Content Include="Picture\SunNeed\2.png" />
+    <Content Include="Picture\SunNeed\3.png" />
     <Content Include="Picture\Weed\Allium triquetrum.jpg" />
     <Content Include="Picture\Weed\Anredera cordifolia.jpg" />
     <Content Include="Picture\Weed\Araujia sericifera.jpg" />
