Add the test page

--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -331,6 +331,7 @@
     <Content Include="Views\PlantSets\Index.cshtml" />
     <Content Include="Views\PlantSets\GetPlantData.cshtml" />
     <Content Include="Views\WeedSets\WeedFilter.cshtml" />
+    <Content Include="Views\PlantSets\TestResult.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
