--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -202,6 +202,12 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Picture\header_picture.jpg" />
+    <Content Include="Picture\header_picture2.jpg" />
+    <Content Include="Picture\header_picture3.jpg" />
+    <Content Include="Picture\header_picture4.jpg" />
+    <Content Include="Picture\header_picture5.jpg" />
+    <Content Include="Picture\header_picture6.jpg" />
+    <Content Include="Picture\homepage_header.jpg" />
     <Content Include="Picture\Icon\Fertilize.png" />
     <Content Include="Picture\Icon\InvasivePlants.png" />
     <Content Include="Picture\Icon\Mist.png" />
