--- a/PlottedAssist/Web.config
+++ b/PlottedAssist/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;Initial Catalog=aspnet-PlottedAssist-20200508030106;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Model1Container" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;initial catalog=aspnet-PlottedAssist-20200508030106;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ProjectModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;initial catalog=aspnet-PlottedAssist-20200508030106;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=tcp:plottedassistdbserver.database.windows.net,1433;Initial Catalog=PlottedAssist_db_1;User Id=sqldpmgr1@plottedassistdbserver;Password=Bakery@555666;AttachDbFilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="Model1Container" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=tcp:plottedassistdbserver.database.windows.net,1433;Initial Catalog=PlottedAssist_db_1;User Id=sqldpmgr1@plottedassistdbserver;Password=Bakery@555666;attachdbfilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="ProjectModel" connectionString="Data Source=tcp:plottedassistdbserver.database.windows.net,1433;Initial Catalog=PlottedAssist_db_1;User Id=sqldpmgr1@plottedassistdbserver;Password=Bakery@555666;attachdbfilename=|DataDirectory|\aspnet-PlottedAssist-20200508030106.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -80,7 +80,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+		  <parameter value="Data Source=tcp:plottedassistdbserver.database.windows.net,1433;User ID=sqldpmgr1;Password=Bakery@555666;Integrated Security=True;MultipleActiveResultSets=True" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
