--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PlantInfoController.cs" />
     <Compile Include="Controllers\PlantSetsController.cs" />
+    <Compile Include="Controllers\SoilTypeController.cs" />
     <Compile Include="Controllers\WeedSetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -356,6 +357,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\PlantInfo\Nurseries.cshtml" />
+    <Content Include="Views\SoilType\SoilTypes.cshtml" />
+    <Content Include="Views\SoilType\WateringGuide.cshtml" />
+    <Content Include="Views\SoilType\WildlifeTips.cshtml" />
+    <Content Include="Views\SoilType\PlantTech.cshtml" />
+    <Content Include="Views\SoilType\Prune.cshtml" />
+    <Content Include="Views\SoilType\OtherCare.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
