Modified PlantsInfo, Added back and forward buttons, Modified the content

--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -365,6 +365,7 @@
     <Content Include="Views\PlantInfo\OtherCare.cshtml" />
     <Content Include="Views\PlantInfo\Sunshine.cshtml" />
     <Content Include="Views\PlantInfo\Benefits.cshtml" />
+    <Content Include="Views\PlantInfo\PlantInfo.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
