--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -198,6 +198,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\flipcard.css" />
+    <Content Include="Content\PlantTech.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -213,6 +215,13 @@
     <Content Include="Picture\Banner\InvTitleMob.png" />
     <Content Include="Picture\Banner\InvTitleWeb.png" />
     <Content Include="Picture\Banner\MyGardenTitle.png" />
+    <Content Include="Picture\clay.jpg" />
+    <Content Include="Picture\fix.png" />
+    <Content Include="Picture\full_shade.png" />
+    <Content Include="Picture\full_sun.png" />
+    <Content Include="Picture\grass.jpg" />
+    <Content Include="Picture\groundcovers.jpg" />
+    <Content Include="Picture\half_shade.png" />
     <Content Include="Picture\header_picture.jpg" />
     <Content Include="Picture\header_picture2.jpg" />
     <Content Include="Picture\header_picture3.jpg" />
@@ -230,6 +239,7 @@
     <Content Include="Picture\Icon\Water.png" />
     <Content Include="Picture\logo.png" />
     <Content Include="Picture\logo_tab.png" />
+    <Content Include="Picture\loom.jpg" />
     <Content Include="Picture\PlantSet\Acacia implexa.jpg" />
     <Content Include="Picture\PlantSet\Acacia pycnantha.jpg" />
     <Content Include="Picture\PlantSet\Acacia verticillata.jpg" />
@@ -260,10 +270,14 @@
     <Content Include="Picture\PlantSet\Viminaria juncea.jpg" />
     <Content Include="Picture\PlantSet\Viola hederacea.jpg" />
     <Content Include="Picture\PlantSet\Wahlenbergia stricta.jpg" />
+    <Content Include="Picture\remember.png" />
+    <Content Include="Picture\sand.jpeg" />
+    <Content Include="Picture\shrub.jpg" />
     <Content Include="Picture\SunNeed\1.jpg" />
     <Content Include="Picture\SunNeed\2.png" />
     <Content Include="Picture\SunNeed\3.png" />
     <Content Include="Picture\Tooltip.jpg" />
+    <Content Include="Picture\trees.jpg" />
     <Content Include="Picture\Weed\Allium triquetrum.jpg" />
     <Content Include="Picture\Weed\Anredera cordifolia.jpg" />
     <Content Include="Picture\Weed\Araujia sericifera.jpg" />
@@ -280,12 +294,14 @@
     <Content Include="Picture\Weed\Echium plantagineum.jpg" />
     <Content Include="Picture\Weed\Ehrharta erecta.jpg" />
     <Content Include="Picture\Weed\Erica lusitanica.jpg" />
+    <Content Include="Picture\Fertilizers.png" />
     <Content Include="Picture\Weed\Fraxinus angustifolia.jpg" />
     <Content Include="Picture\Weed\Galium aparine.jpg" />
     <Content Include="Picture\Weed\Hedera helix.jpg" />
     <Content Include="Picture\Weed\Ipomoea indica.jpg" />
     <Content Include="Picture\Weed\Lycium ferocissimum.jpg" />
     <Content Include="Picture\Weed\Malva parviflora.jpg" />
+    <Content Include="Picture\Mulch.png" />
     <Content Include="Picture\Weed\Nassella neesiana.jpg" />
     <Content Include="Picture\Weed\Pittosporum undulatum.jpg" />
     <Content Include="Picture\Weed\Populus alba.jpg" />
