--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -238,6 +238,14 @@
     <Content Include="Picture\logo.png" />
     <Content Include="Picture\logo_tab.png" />
     <Content Include="Picture\MyGardenCard.jpg" />
+    <Content Include="Picture\Plantinfo\compost.jpg" />
+    <Content Include="Picture\Plantinfo\Nurseries.jpg" />
+    <Content Include="Picture\Plantinfo\planting_tech.jpg" />
+    <Content Include="Picture\Plantinfo\pruning.jpg" />
+    <Content Include="Picture\Plantinfo\soil_info.jpg" />
+    <Content Include="Picture\Plantinfo\sunshine.jpg" />
+    <Content Include="Picture\Plantinfo\Watering_guide.jpg" />
+    <Content Include="Picture\Plantinfo\wildlife.jpg" />
     <Content Include="Picture\PlantSet\Acacia implexa.jpg" />
     <Content Include="Picture\PlantSet\Acacia pycnantha.jpg" />
     <Content Include="Picture\PlantSet\Acacia verticillata.jpg" />
