--- a/PlottedAssist/PlottedAssist.csproj
+++ b/PlottedAssist/PlottedAssist.csproj
@@ -342,8 +342,6 @@
     <Content Include="Views\Dashboard\Delete.cshtml" />
     <Content Include="Views\Dashboard\Edit.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
@@ -354,7 +352,7 @@
     <Content Include="Views\PlantSets\Details.cshtml" />
     <Content Include="Views\PlantSets\GetPlantData.cshtml" />
     <Content Include="Views\PlantSets\Index.cshtml" />
-    <Content Include="Views\PlantSets\Instrction.cshtml" />
+    <Content Include="Views\PlantSets\Instruction.cshtml" />
     <Content Include="Views\PlantSets\PlantList.cshtml" />
     <Content Include="Views\PlantSets\TestResult.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
